ya se puede dibujar simbolos en las casillas y verificar filas y columnas

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ main > section > .fila > .columna{
     
     width: 30%;
     height: 100%;
+    padding: auto;
 
     display: flex;
     justify-content: center;
